@@ -1,101 +1,0 @@
-<html>
-  <head>
-    <title>SPVMドキュメント 1.0(beta)</title>
-    <style src="common.css"></style>
-  </head>
-  <body>
-    <h1>
-      SPVMドキュメント 1.0(beta)
-    </h1>
-    <h2>SPVMの目的</h2>
-    <ul>
-      <li>目的</li>
-    </ul>
-    <h2>対象のユーザー</h2>
-    
-    <h2>SPVMの特徴</h2>
-    
-    <h2>レポジトリ</h2>
-    
-    <h2>CPAN</h2>
-
-    <h2>開発方針</h2>
-    
-    <h2>インストール</h2>
-    
-    <h2>チュートリアル</h2>
-    
-    <h2>言語仕様</h2>
-    <ul>
-      <li>構文解析</li>
-      <li>モジュール</li>
-      <li>データ型</li>
-      <li>文字列型</li>
-      <li>数値型</li>
-      <li>byte型</li>
-      <li>short型</li>
-      <li>int型</li>
-      <li>long型</li>
-      <li>float型</li>
-      <li>double型</li>
-      <li>配列型</li>
-      <li>オブジェクト型</li>
-      <li>パッケージ型</li>
-      <li>ポインター型</li>
-      <li>汎用オブジェクト型</li>
-      <li>値型</li>
-      <li>リファレンス型</li>
-      <li>例外処理</li>
-    　<li>列挙</li>
-      <li>数値計算</li>
-      <li>定数リテラル</li>
-      <li>条件分岐</li>
-      <li>演算子</li>
-      <li>数値演算子</li>
-      <li>シフト演算子</li>
-      <li>ビット演算子</li>
-      <li>比較演算子</li>
-      <li>論理演算子</li>
-      <li>繰り返し</li>
-      <li>自動的な型変換</li>
-      <li>明示的な型変換</li>
-      <li>型推論</li>
-      <li>パッケージ</li>
-      <li>フィールド</li>
-      <li>パッケージ変数</li>
-      <li>サブルーチン</li>
-      <li>メソッドコール</li>
-      <li>クラスメソッドコール</li>
-      <li>サブルーチンコール</li>
-      <li>フィールドアクセス</li>
-      <li>パッケージ変数アクセス</li>
-      <li>レキシカル変数</li>
-      <li>インターフェース</li>
-      <li>エクスチェンジAPI</li>
-      <li>ネイティブAPI</li>
-      <li>エクステンション</li>
-      <li>実行ファイル生成</li>
-    </ul>
-
-    <h2>標準関数</h2>
-    <ul>
-      
-    </ul>
-    
-    <h2>標準モジュール</h2>
-    <ul>
-      <li>SPVM::Byte</li>
-      <li>SPVM::Short</li>
-      <li>SPVM::Int</li>
-      <li>SPVM::Long</li>
-      <li>SPVM::Float</li>
-      <li>SPVM::Double</li>
-      <li>SPVM::List</li>
-    </ul>
-    
-    <h2>標準ツール</h2>
-    <ul>
-      <li>spvmcc</li>
-    </ul>
-  </body>
-</html>
