@@ -379,7 +379,7 @@ enum {
   SPVM_OPCODE_C_ID_IS_TYPE,
   SPVM_OPCODE_C_ID_HAS_INTERFACE,
   SPVM_OPCODE_C_ID_CHECK_OBJECT_TYPE,
-  SPVM_OPCODE_C_ID_CHECK_INTERFACE_TYPE,
+  SPVM_OPCODE_C_ID_CHECK_INTERFACE,
   SPVM_OPCODE_C_ID_ENTER_SCOPE,
   SPVM_OPCODE_C_ID_PUSH_MORTAL,
   SPVM_OPCODE_C_ID_LEAVE_SCOPE,
