@@ -379,7 +379,7 @@ const char* const SPVM_OPCODE_C_ID_NAMES[] = {
   "IS_TYPE",
   "HAS_INTERFACE",
   "CHECK_OBJECT_TYPE",
-  "CHECK_INTERFACE_TYPE",
+  "CHECK_INTERFACE",
   "ENTER_SCOPE",
   "PUSH_MORTAL",
   "LEAVE_SCOPE",
