@@ -1,3 +1,3 @@
-package SPVM::Comparator : interface {
+package SPVM::Comparator : interface_t {
   sub compare : int ($self : self, $x1 : object, $x2 : object);
 }
