@@ -1,3 +1,3 @@
-package TestCase::Interface::Interface : interface {
+package TestCase::Interface::Interface : interface_t {
   sub foo : int ($self : self, $var1 : int, $var2 : long);
 }
